# python-tkgm

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  run_scheduler.py
scripts/: README.md  crontab  sync-oracle.sh  sync-postgresql-4326.sh  sync-postgresql-kadastro-yeni.sh  sync-postgresql.sh  sync.sh
src/: client.py  config.py  database.py  geometry.py  log_explorer.py  logging_utils.py  models.py  scraper.py  security.py  telegram.py
src/database/: __init__.py  connection.py  schema.py  statistics.py
src/database/repositories/: __init__.py  base_repository.py  district_repository.py  failed_records_repository.py  log_repository.py  neighbourhood_repository.py  parcel_repository.py  settings_repository.py
src/tools/: recover_parcels_by_log.py
